--- a/src/app.component.html
+++ b/src/app.component.html
@@ -289,12 +289,19 @@
           @for (message of messages(); track $index) {
             <div class="flex" [class.justify-end]="message.role === 'user'">
               @if (message.role === 'model') {
-                <div class="flex items-end max-w-lg">
+                <div class="flex items-end max-w-lg group">
                   <div class="w-8 h-8 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-sm flex-shrink-0" [class.mr-2]="uiLanguage() === 'en'" [class.ml-2]="uiLanguage() === 'fa'">
                      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 8V4H8"/><rect x="4" y="12" width="16" height="8" rx="2"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="M17 12v-2a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2v2"/><path d="M7 12v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"/></svg>
                   </div>
-                  <div class="bg-gray-200 dark:bg-slate-700 text-gray-800 dark:text-gray-200 p-3 rounded-2xl rounded-bl-none">
+                  <div class="bg-gray-200 dark:bg-slate-700 text-gray-800 dark:text-gray-200 p-3 rounded-2xl rounded-bl-none relative">
                     <div class="text-sm prose prose-sm max-w-none" [class.prose-invert]="theme() === 'dark'" [innerHTML]="renderMessage(message.text)" dir="ltr"></div>
+                     <button (click)="speak(message.text)" [title]="t().speakText" class="absolute -bottom-3 -right-3 text-gray-400 dark:text-gray-500 hover:text-indigo-500 dark:hover:text-indigo-400 transition-all duration-200 opacity-0 group-hover:opacity-100 focus:opacity-100" [class.opacity-100]="currentlySpeakingText() === message.text">
+                        @if(currentlySpeakingText() === message.text) {
+                          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 animate-pulse" viewBox="0 0 24 24" fill="currentColor"><path d="M4.5 10.5a1.5 1.5 0 0 0 3 0v-6a1.5 1.5 0 0 0-3 0v6ZM12 11.25a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-1.5 0v7.5ZM9 9a.75.75 0 0 1-1.5 0V7.5a.75.75 0 0 1 1.5 0V9Zm9 1.5a.75.75 0 0 0 1.5 0v-4.5a.75.75 0 0 0-1.5 0v4.5Zm-3-1.5a.75.75 0 0 1-1.5 0v-1.5a.75.75 0 0 1 1.5 0V9Z"/><path fill-rule="evenodd" d="M20.25 10.5a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0v-6ZM3.75 12a.75.75 0 0 1 0-1.5h16.5a.75.75 0 0 1 0 1.5H3.75Z" clip-rule="evenodd"/></svg>
+                        } @else {
+                          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor"><path d="M8.25 4.5a3.75 3.75 0 0 1 7.5 0v4.5a3.75 3.75 0 0 1-7.5 0V4.5Z" /><path d="M6 10.5a.75.75 0 0 1 .75.75v.75a4.5 4.5 0 0 0 9 0v-.75a.75.75 0 0 1 1.5 0v.75a6 6 0 0 1-12 0v-.75A.75.75 0 0 1 6 10.5Z" /><path d="M12 15a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0v-4.5A.75.75 0 0 1 12 15Z" /></svg>
+                        }
+                    </button>
                   </div>
                 </div>
               } @else {
@@ -330,6 +337,22 @@
           </div>
         }
         <div class="flex items-center space-x-3" [class.space-x-reverse]="uiLanguage() === 'fa'">
+          @if (speechSupported()) {
+             <button
+              [title]="isRecording() ? t().stopRecording : t().startRecording"
+              (click)="toggleRecording()"
+              [disabled]="isLoading()"
+              class="flex-shrink-0 text-gray-500 dark:text-gray-400 hover:text-indigo-500 dark:hover:text-indigo-400 disabled:text-gray-400 dark:disabled:text-gray-600 disabled:cursor-not-allowed transition-colors p-3 rounded-full hover:bg-gray-200 dark:hover:bg-slate-700">
+                @if (isRecording()) {
+                  <span class="relative flex h-6 w-6">
+                    <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="relative inline-flex h-6 w-6 text-red-500"><path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" /></svg>
+                  </span>
+                } @else {
+                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M8.25 4.5a3.75 3.75 0 0 1 7.5 0v4.5a3.75 3.75 0 0 1-7.5 0V4.5Z" /><path d="M6 10.5a.75.75 0 0 1 .75.75v.75a4.5 4.5 0 0 0 9 0v-.75a.75.75 0 0 1 1.5 0v.75a6 6 0 0 1-12 0v-.75A.75.75 0 0 1 6 10.5Z" /><path d="M12 15a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0v-4.5A.75.75 0 0 1 12 15Z" /></svg>
+                }
+             </button>
+          }
           <input
             type="text"
             [placeholder]="t().typeYourMessage"
